--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
 
+    compile project(path: ':MPChartLib')
 }
